--- a/templates/main.html
+++ b/templates/main.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <title>whois</title>
 <h1>super whois NA</h1>
-{{ test }}
+<p>Проверка информации о домене или ip-адресе.</p>
   <form action="" method=post>
     <dl>
       <dt>Введите домен:
       <dd><input type=text name=domain>
       <dd><input type=submit value=whois>
     </dl>
-  </form> 
-{{ test2 }}
+  </form>
+  Для домена {{ input_domain }} найдено следующее: <br>
+  {% for i in info_whois %} 
+  <br> {{ i }} 
+  {% endfor %} 
